--- a/about.html
+++ b/about.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html
   data-wf-page="66f2157fdff711e73071e097"
@@ -66,6 +66,91 @@
       gtag("set", "developer_id.dZGVlNj", true);
       gtag("config", "G-LZYXFNN50E");
     </script>
+    <style>
+      * {
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+      }
+      .section-history {
+        position: relative;
+        overflow: hidden;
+      }
+      .tetris-wrapper {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%; /* Adjust height as needed */
+        z-index: 0;
+      }
+      .tetris-container {
+        width: 100%;
+        height: 100%;
+      }
+      .overlay-tetris {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(
+          15,
+          19,
+          22,
+          0.8
+        ); /* Darker overlay for better readability */
+        z-index: 1;
+      }
+
+      .page-padding-tetris {
+        grid-column-gap: 0px;
+        grid-row-gap: 0px;
+        flex-flow: row;
+        justify-content: flex-end;
+        align-items: flex-start;
+        width: 100%;
+        max-width: 93vw;
+        height: 50%;
+        padding-left: 7vw;
+        padding-right: 7vw;
+        font-family: Plusjakartasans, sans-serif;
+        display: flex;
+        overflow: visible;
+      }
+      .container-large-tetris {
+        width: 80%;
+        max-width: 94rem;
+        height: 100%;
+        margin-left: auto;
+        margin-right: auto;
+      }
+      /* Custom Tetris styles */
+      .tetris-container .blockrain-game-holder {
+        background-color: transparent !important;
+      }
+      .tetris-container .blockrain-board {
+        background-color: rgba(0, 0, 0, 0.2);
+        border: none;
+      }
+      .tetris-container .blockrain-score {
+        display: none;
+      }
+      .heading-large {
+        animation: fadeIn 2s ease-in-out;
+      }
+      .text-size-regular {
+        animation: fadeIn 3s ease-in-out;
+      }
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
+      }
+    </style>
+
     <!-- Please keep this css code to improve the font quality-->
     <style>
       * {
@@ -93,6 +178,7 @@
         }
       }
     </style>
+    <link rel="stylesheet" href="/css/blockrain.css" />
   </head>
   <body>
     <div class="preloader" data-w-id="a30832af-37da-084b-575e-ca3a1631cb9b">
@@ -443,142 +529,143 @@
                 </div>
               </section>
               <section class="section-history">
-                <div class="page-padding">
-                  <div class="container-large">
-                    <div class="padding-vertical padding-xxhuge">
-                      <div class="about-history-banner">
-                        <div class="history-title">
-                          <div class="history-intro">
-                            <h3 class="heading-large">
-                              My experience is what has shaped my skill-set
-                            </h3>
-                            <div class="max-width-medium">
-                              <p class="text-size-regular">
-                                To this day, I'm proud of the projects I've
-                                developed, and continue to use my skills in
-                                software engineering to solve complex problems
-                                and drive innovation.
-                              </p>
-                            </div>
-                          </div>
-                        </div>
-                        <div
-                          class="history-list"
-                          id="w-node-_91f029a9-e181-1c6d-17ca-d868390c7383-3071e097"
-                        >
-                          <div
-                            class="history-list-item"
-                            id="w-node-a72517b9-7df6-05a8-597d-51472544f9f2-3071e097"
-                          >
-                            <div
-                              class="history-card"
-                              id="w-node-a72517b9-7df6-05a8-597d-51472544f9f3-3071e097"
-                            >
-                              <div class="history-year">
-                                <div class="text-size-tiny text-style-allcaps">
-                                  2023
-                                </div>
-                              </div>
-                              <h3 class="heading-small">
-                                Healthcare Systems R&amp;A, Machine Learning
-                                Intern
-                              </h3>
-                              <div class="text-size-regular">
-                                My responsibilities included developing ML
-                                models, implementing advanced techniques like
-                                SMOTE-ENN, and creating a PyTorch neural network
-                                for predicting heart conditions.
-                              </div>
-                            </div>
-                          </div>
-                          <div
-                            class="history-list-item"
-                            id="w-node-_9e819be6-a290-b22f-b0af-d5f561bbe690-3071e097"
-                          >
-                            <div
-                              class="history-card"
-                              id="w-node-_9e819be6-a290-b22f-b0af-d5f561bbe691-3071e097"
-                            >
-                              <div class="history-year">
-                                <div class="text-size-tiny text-style-allcaps">
-                                  2023
-                                </div>
-                              </div>
-                              <h3 class="heading-small">WordLeable Project</h3>
-                              <div class="text-size-regular">
-                                Developed a responsive web-based word game using
-                                JavaScript, HTML, and CSS. Implemented RESTful
-                                API integration and designed an interactive
-                                feedback system, enhancing user experience and
-                                engagement.
-                              </div>
-                            </div>
-                          </div>
-                          <div
-                            class="history-list-item"
-                            id="w-node-cafcd454-ff71-e67a-b697-03976e39cc2c-3071e097"
-                          >
-                            <div
-                              class="history-card"
-                              id="w-node-_91f029a9-e181-1c6d-17ca-d868390c739c-3071e097"
-                            >
-                              <div class="history-year">
-                                <div class="text-size-tiny text-style-allcaps">
-                                  2022-Present
-                                </div>
-                              </div>
-                              <h3 class="heading-small">
-                                Concordia University, Software Engineering
-                                Student
-                              </h3>
-                              <div class="text-size-regular">
-                                Pursuing a Bachelor of Engineering in Software
-                                Engineering. Maintaining a GPA of 3.35/4.3 while
-                                working on projects and expanding my technical
-                                skillset.
-                              </div>
-                            </div>
-                          </div>
-                          <div
-                            class="history-list-item"
-                            id="w-node-_937a80f1-c508-bd10-8e6d-2bc33f9c78c5-3071e097"
-                          >
-                            <div
-                              class="history-card"
-                              id="w-node-_937a80f1-c508-bd10-8e6d-2bc33f9c78c6-3071e097"
-                            >
-                              <div class="history-year">
-                                <div class="text-size-tiny text-style-allcaps">
-                                  2022-2023
-                                </div>
-                              </div>
-                              <h3 class="heading-small">Pup Storm Project</h3>
-                              <div class="text-size-regular">
-                                Engineered a full-stack pet adoption platform
-                                using PHP and MySQL. Implemented secure user
-                                authentication and authorization system, and
-                                integrated external APIs to enhance user
-                                engagement and streamline the adoption process.
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                <div class="tetris-wrapper">
+                  <div class="tetris-container" id="tetris"></div>
+                  <div class="overlay-tetris"></div>
                 </div>
-                <div class="sticky-about-banner-tetris">
-                  <div class="background-wrapper sticky">
-                    <div class="background-image">
-                      <div class="overlay dark-overlay"></div>
-                      <div class="page-padding-tetris">
-                        <div class="container-large-tetris" id="tetris"></div>
-                        <div class="div-block" id="score"></div>
+                <div class="content-container">
+                  <div class="page-padding-tetris">
+                    <div class="container-large-tetris">
+                      <div class="padding-vertical padding-xxhuge">
+                        <div class="about-history-banner">
+                          <div class="history-title">
+                            <div class="history-intro">
+                              <h3 class="heading-large">
+                                My experience is what has shaped my skill-set
+                              </h3>
+                              <div class="max-width-medium">
+                                <p class="text-size-regular">
+                                  To this day, I'm proud of the projects I've
+                                  developed, and continue to use my skills in
+                                  software engineering to solve complex problems
+                                  and drive innovation.
+                                </p>
+                              </div>
+                            </div>
+                          </div>
+                          <div class="history-list">
+                            <!-- Your history items go here -->
+                            <!-- Example: -->
+                            <div class="history-list-item">
+                              <div class="history-card">
+                                <div class="history-year">
+                                  <div
+                                    class="text-size-tiny text-style-allcaps"
+                                  >
+                                    2023
+                                  </div>
+                                </div>
+                                <h3 class="heading-small">
+                                  Healthcare Systems R&A, Machine Learning
+                                  Intern
+                                </h3>
+                                <div class="text-size-regular">
+                                  My responsibilities included developing ML
+                                  models, implementing advanced techniques like
+                                  SMOTE-ENN, and creating a PyTorch neural
+                                  network for predicting heart conditions.
+                                </div>
+                              </div>
+                            </div>
+                            <div
+                              id="w-node-_9e819be6-a290-b22f-b0af-d5f561bbe690-3071e097"
+                              class="history-list-item"
+                            >
+                              <div
+                                id="w-node-_9e819be6-a290-b22f-b0af-d5f561bbe691-3071e097"
+                                class="history-card"
+                              >
+                                <div class="history-year">
+                                  <div
+                                    class="text-size-tiny text-style-allcaps"
+                                  >
+                                    2023
+                                  </div>
+                                </div>
+                                <h3 class="heading-small">
+                                  WordLeable Project
+                                </h3>
+                                <div class="text-size-regular">
+                                  Developed a responsive web-based word game
+                                  using JavaScript, HTML, and CSS. Implemented
+                                  RESTful API integration and designed an
+                                  interactive feedback system, enhancing user
+                                  experience and engagement.
+                                </div>
+                              </div>
+                            </div>
+                            <div
+                              id="w-node-cafcd454-ff71-e67a-b697-03976e39cc2c-3071e097"
+                              class="history-list-item"
+                            >
+                              <div
+                                id="w-node-_91f029a9-e181-1c6d-17ca-d868390c739c-3071e097"
+                                class="history-card"
+                              >
+                                <div class="history-year">
+                                  <div
+                                    class="text-size-tiny text-style-allcaps"
+                                  >
+                                    2022-Present
+                                  </div>
+                                </div>
+                                <h3 class="heading-small">
+                                  Concordia University, Software Engineering
+                                  Student
+                                </h3>
+                                <div class="text-size-regular">
+                                  Pursuing a Bachelor of Engineering in Software
+                                  Engineering. Maintaining a GPA of 3.35/4.3
+                                  while working on projects and expanding my
+                                  technical skillset.
+                                </div>
+                              </div>
+                            </div>
+                            <div
+                              id="w-node-_937a80f1-c508-bd10-8e6d-2bc33f9c78c5-3071e097"
+                              class="history-list-item"
+                            >
+                              <div
+                                id="w-node-_937a80f1-c508-bd10-8e6d-2bc33f9c78c6-3071e097"
+                                class="history-card"
+                              >
+                                <div class="history-year">
+                                  <div
+                                    class="text-size-tiny text-style-allcaps"
+                                  >
+                                    2022-2023
+                                  </div>
+                                </div>
+                                <h3 class="heading-small">Pup Storm Project</h3>
+                                <div class="text-size-regular">
+                                  Engineered a full-stack pet adoption platform
+                                  using PHP and MySQL. Implemented secure user
+                                  authentication and authorization system, and
+                                  integrated external APIs to enhance user
+                                  engagement and streamline the adoption
+                                  process.
+                                </div>
+                              </div>
+                            </div>
+                            <!-- Add more history items as needed -->
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
                 </div>
               </section>
+
               <section class="section-faq">
                 <div class="page-padding">
                   <div class="container-large">
@@ -1480,14 +1567,37 @@
     </div>
     <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/webflow-script.js" type="text/javascript"></script>
+
+    <div id="tetris">
+      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+      <script src="/js/blockrain.jquery.min.js"></script>
+      <script>
+        $(document).ready(function () {
+          $("#tetris").blockrain({
+            autoplay: true,
+            autoplayRestart: true,
+            speed: 250,
+            autoBlockWidth: true,
+            autoBlockSize: 35,
+            theme: {
+              background: "#0f1316",
+              backgroundGrid: "#1a1d20", // Slightly lighter shade for grid lines
+              complexBlocks: {
+                line: [
+                  "images/blocks/custom/line.png",
+                  "images/blocks/custom/line.png",
+                ],
+                square: "images/blocks/custom/square.png",
+                arrow: "images/blocks/custom/arrow.png",
+                rightHook: "images/blocks/custom/rightHook.png",
+                leftHook: "images/blocks/custom/leftHook.png",
+                rightZag: "images/blocks/custom/rightZag.png",
+                leftZag: "images/blocks/custom/leftZag.png",
+              },
+            },
+          });
+        });
+      </script>
+    </div>
   </body>
 </html>
-
-
-
-
-
-
-
-
-
