Update navigation links to remove unnecessary '.html' suffix

--- a/contact.html
+++ b/contact.html
@@ -204,7 +204,7 @@
                   <div class="container-large">
                     <div class="nav-content">
                       <div class="nav-left">
-                        <a class="brand w-nav-brand" href="/.html"
+                        <a class="brand w-nav-brand" href="/"
                           ><img
                             alt=""
                             class="image"
@@ -1288,7 +1288,7 @@
                       <div class="text-size-small">Navigation</div>
                     </div>
                     <div class="sidebar-menu-list">
-                      <a class="sidebar-menu-item w-inline-block" href="/.html"
+                      <a class="sidebar-menu-item w-inline-block" href="/"
                         ><div class="dot-wrapper nav-dot">
                           <div class="form-number">01</div>
                           <div class="dot-mouseover">
