--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
                         <a
                           aria-current="page"
                           class="brand w-nav-brand w--current"
-                          href="/.html"
+                          href="/"
                           ><img
                             alt=""
                             class="image"
@@ -2443,7 +2443,7 @@
                       <a
                         aria-current="page"
                         class="sidebar-menu-item w-inline-block w--current"
-                        href="/.html"
+                        href="/"
                         ><div class="dot-wrapper nav-dot">
                           <div class="form-number">01</div>
                           <div class="dot-mouseover">
