--- a/work.html
+++ b/work.html
@@ -47,19 +47,17 @@
     </script>
     <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon" />
     <link href="images/app-icon.png" rel="apple-touch-icon" />
-    <script
-      async=""
-      src="https://www.googletagmanager.com/gtag/js?id=G-LZYXFNN50E"
-    ></script>
-    <script type="text/javascript">
-      window.dataLayer = window.dataLayer || [];
-      function gtag() {
-        dataLayer.push(arguments);
-      }
-      gtag("js", new Date());
-      gtag("set", "developer_id.dZGVlNj", true);
-      gtag("config", "G-LZYXFNN50E");
-    </script>
+   
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LZYXFNN50E"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-LZYXFNN50E');
+</script>
+
     <!-- Please keep this css code to improve the font quality-->
     <style>
       * {
