--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
     <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon" />
     <link href="images/app-icon.png" rel="apple-touch-icon" />
 
-
     <!-- Please keep this css code to improve the font quality-->
     <style>
       * {
@@ -79,9 +78,26 @@
       defer=""
       src="https://cdn.jsdelivr.net/npm/@finsweet/attributes-sliderdots@1/sliderdots.js"
     ></script>
+    <style>
+      /* Add this in your head section or CSS file */
+
+      .body {
+        background-color: #0f1316;
+      }
+
+      /* Hide scrollbar during fast scroll to prevent white flash */
+      body::-webkit-scrollbar {
+        background-color: #0f1316;
+      }
+
+      body::-webkit-scrollbar-track {
+        background-color: #0f1316;
+      }
+    </style>
   </head>
   <body class="body">
     <div class="page-wrapper">
+      
       <div class="preloader" data-w-id="a30832af-37da-084b-575e-ca3a1631cb9b">
         <div
           class="preloader-content"
@@ -2361,6 +2377,7 @@
         </div>
       </main>
     </div>
+
     <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/webflow-script.js" type="text/javascript"></script>
     <div id="matter-js-container">
@@ -2677,6 +2694,40 @@
         }, {});
 
         observer.observe(containerElement);
+      </script>
+      <script>
+        // Preload critical images
+        document.addEventListener("DOMContentLoaded", function () {
+          const images = document.querySelectorAll(".image-full");
+          images.forEach((img) => {
+            if (img.getBoundingClientRect().top < window.innerHeight) {
+              // Remove lazy loading for images above the fold
+              img.removeAttribute("loading");
+
+              // Preload the image
+              const preloadLink = document.createElement("link");
+              preloadLink.href = img.src;
+              preloadLink.rel = "preload";
+              preloadLink.as = "image";
+              document.head.appendChild(preloadLink);
+            }
+          });
+        });
+
+        // Handle scroll performance
+        let ticking = false;
+        window.addEventListener(
+          "scroll",
+          function () {
+            if (!ticking) {
+              window.requestAnimationFrame(function () {
+                ticking = false;
+              });
+              ticking = true;
+            }
+          },
+          { passive: true }
+        );
       </script>
     </div>
   </body>
