--- a/work.html
+++ b/work.html
@@ -79,30 +79,31 @@
     </style>
   </head>
   <body>
-    <div class="preloader" data-w-id="a30832af-37da-084b-575e-ca3a1631cb9b">
-      <div
-        class="preloader-content"
-        data-w-id="a30832af-37da-084b-575e-ca3a1631cb9c"
-      >
+   
+    <div class="page-wrapper">
+      <div class="preloader" data-w-id="a30832af-37da-084b-575e-ca3a1631cb9b">
         <div
-          class="preloader-brand"
-          data-w-id="a30832af-37da-084b-575e-ca3a1631cb9d"
+          class="preloader-content"
+          data-w-id="a30832af-37da-084b-575e-ca3a1631cb9c"
         >
-          Char
-        </div>
-        <div
-          class="preloader-line"
-          data-w-id="a30832af-37da-084b-575e-ca3a1631cb9f"
-        ></div>
-        <div
-          class="preloader-brand"
-          data-w-id="a30832af-37da-084b-575e-ca3a1631cba0"
-        >
-          bel.
+          <div
+            class="preloader-brand"
+            data-w-id="a30832af-37da-084b-575e-ca3a1631cb9d"
+          >
+            Char
+          </div>
+          <div
+            class="preloader-line"
+            data-w-id="a30832af-37da-084b-575e-ca3a1631cb9f"
+          ></div>
+          <div
+            class="preloader-brand"
+            data-w-id="a30832af-37da-084b-575e-ca3a1631cba0"
+          >
+            bel.
+          </div>
         </div>
       </div>
-    </div>
-    <div class="page-wrapper">
       <div class="global-styles w-embed">
         <style>
           /* Snippet gets rid of top margin on first element in any rich text*/
@@ -1054,5 +1055,35 @@
     </div>
     <script src="js/jquery.js" type="text/javascript"></script>
     <script src="js/webflow-script.js" type="text/javascript"></script>
+    <script>
+      // Preload critical images
+      document.addEventListener('DOMContentLoaded', function() {
+        const images = document.querySelectorAll('.image-full');
+        images.forEach(img => {
+          if (img.getBoundingClientRect().top < window.innerHeight) {
+            // Remove lazy loading for images above the fold
+            img.removeAttribute('loading');
+            
+            // Preload the image
+            const preloadLink = document.createElement('link');
+            preloadLink.href = img.src;
+            preloadLink.rel = 'preload';
+            preloadLink.as = 'image';
+            document.head.appendChild(preloadLink);
+          }
+        });
+      });
+    
+      // Handle scroll performance
+      let ticking = false;
+      window.addEventListener('scroll', function() {
+        if (!ticking) {
+          window.requestAnimationFrame(function() {
+            ticking = false;
+          });
+          ticking = true;
+        }
+      }, { passive: true });
+    </script>
   </body>
 </html>
