--- a/experience/pupstorm-project.html
+++ b/experience/pupstorm-project.html
@@ -152,13 +152,14 @@
                       <div class="nav-left">
                         <a class="brand w-nav-brand" href="/"
                           ><img
-                            alt=""
-                            class="image"
-                            height="Auto"
-                            loading="lazy"
-                            src="../images/text-20-2-.svg"
-                            width="Auto"
-                        /></a>
+                          alt="Charbel Tannous"
+                          height="100"
+                          width="100"
+                          class="image"
+                          loading="lazy"
+                          src="../images/text-20-2-.svg"
+                          
+                      /></a>
                         <div class="page-title">
                           <div class="text-block">work</div>
                         </div>
@@ -1040,6 +1041,7 @@
       </main>
     </div>
     <script src="../js/jquery.js" type="text/javascript"></script>
+    <script src="../js/array-optimizer.js" type="text/javascript"></script>
     <script src="../js/webflow-script.js" type="text/javascript"></script>
    
   </body>
