--- a/index.html
+++ b/index.html
@@ -219,12 +219,13 @@
                           class="brand w-nav-brand w--current"
                           href="/"
                           ><img
-                            alt=""
+                            alt="Charbel Tannous"
+                            height="100"
+                            width="100"
                             class="image"
-                            height="Auto"
                             loading="lazy"
                             src="images/text-20-2-.svg"
-                            width="Auto"
+                            
                         /></a>
                         <div class="page-title">
                           <div class="text-block"></div>
@@ -1049,11 +1050,12 @@
                               <div class="inside solid">
                                 <div class="image-base">
                                   <img
-                                    alt=""
+                                    alt="Screenshot of Wordleable website project"
                                     class="image-full"
                                     loading="lazy"
                                     src="images/a-20picture-20of-20the-20website-20wordleable.webp"
-                                    width="Auto"
+                                    width="800"
+                                    height="600"
                                   />
                                 </div>
                               </div>
@@ -2387,6 +2389,8 @@
     </div>
 
     <script src="js/jquery.js" type="text/javascript"></script>
+    <script src="js/array-optimizer.js" type="text/javascript"></script>
+ <script src="js/array-optimizer.js" type="text/javascript"></script>
     <script src="js/webflow-script.js" type="text/javascript"></script>
     <div id="matter-js-container">
       <script src="https://cdnjs.cloudflare.com/ajax/libs/matter-js/0.19.0/matter.min.js"></script>
