Add robots.txt, inject analyze-webflow.js script, and implement preloader in multiple HTML files; refactor CSS transitions

--- a/contact.html
+++ b/contact.html
@@ -280,12 +280,39 @@
     </style>
     <link rel="stylesheet" href="/css/blockrain.css" />
   </head>
+  <div
+  class="preloader preloader-hidden"
+  data-w-id="a30832af-37da-084b-575e-ca3a1631cb9b"
+>
+  <div
+    class="preloader-content"
+    data-w-id="a30832af-37da-084b-575e-ca3a1631cb9c"
+  >
+    <div
+      class="preloader-brand"
+      data-w-id="a30832af-37da-084b-575e-ca3a1631cb9d"
+    >
+      Char
+    </div>
+    <div
+      class="preloader-line"
+      data-w-id="a30832af-37da-084b-575e-ca3a1631cb9f"
+    ></div>
+    <div
+      class="preloader-brand"
+      data-w-id="a30832af-37da-084b-575e-ca3a1631cba0"
+    >
+      bel.
+    </div>
+  </div>
+</div>
   <body>
+  
       <!-- Transition Preloader -->
       <div class="transition-preloader">
         <span class="transition-loader"></span>
       </div>
-  
+    
     <div class="page-wrapper">
     <div class="global-styles w-embed">
       <style>
@@ -1189,7 +1216,8 @@
     </main>
     </div>
     <script src="js/jquery.js" type="text/javascript"></script>
-     <script src="js/webflow-script.js" type="text/javascript"></script>
+    <script src="js/analyze-webflow.js"></script>
+  <script src="js/webflow-script.js" type="text/javascript"></script>
     <div id="tetris">
       <script src="/js/blockrain.jquery.min.js"></script>
       <script>
