--- a/experience/pupstorm-project.html
+++ b/experience/pupstorm-project.html
@@ -1041,6 +1041,7 @@
       </main>
     </div>
     <script src="../js/jquery.js" type="text/javascript"></script>
+    <script src="/js/analyze-webflow.js" type="text/javascript"></script>
     <script src="../js/webflow-script.js" type="text/javascript"></script>
    
   </body>
