--- a/experience/wordleable-project.html
+++ b/experience/wordleable-project.html
@@ -1032,7 +1032,8 @@
       </main>
     </div>
     <script src="../js/jquery.js" type="text/javascript"></script>
-  <script src="../js/webflow-script.js" type="text/javascript"></script>
+  <script src="/js/analyze-webflow.js" type="text/javascript"></script>
+    <script src="../js/webflow-script.js" type="text/javascript"></script>
  
   </body>
 </html>
