--- a/work.html
+++ b/work.html
@@ -130,6 +130,32 @@
       }
     </style>
   </head>
+  <div
+  class="preloader preloader-hidden"
+  data-w-id="a30832af-37da-084b-575e-ca3a1631cb9b"
+>
+  <div
+    class="preloader-content"
+    data-w-id="a30832af-37da-084b-575e-ca3a1631cb9c"
+  >
+    <div
+      class="preloader-brand"
+      data-w-id="a30832af-37da-084b-575e-ca3a1631cb9d"
+    >
+      Char
+    </div>
+    <div
+      class="preloader-line"
+      data-w-id="a30832af-37da-084b-575e-ca3a1631cb9f"
+    ></div>
+    <div
+      class="preloader-brand"
+      data-w-id="a30832af-37da-084b-575e-ca3a1631cba0"
+    >
+      bel.
+    </div>
+  </div>
+</div>
   <body>
     <!-- Transition Preloader -->
     <div class="transition-preloader">
@@ -1088,7 +1114,9 @@
     </div>
 
     <script src="js/jquery.js" type="text/javascript"></script>
-     <script src="js/webflow-script.js" type="text/javascript"></script>
+     <script src="/js/analyze-webflow.js" type="text/javascript"></script>
+    <script src="js/analyze-webflow.js"></script>
+  <script src="js/webflow-script.js" type="text/javascript"></script>
     <script>
       document.addEventListener("DOMContentLoaded", function () {
         const elements = document.querySelectorAll(
