Refactor CSS styles for tags and project cards; update heading levels in HTML for consistency and improve link to resume

--- a/index.html
+++ b/index.html
@@ -1069,9 +1069,9 @@
                                   >
                                     Project Showcase
                                   </div>
-                                  <h3 class="heading-medium">
+                                  <h2 class="heading-medium">
                                     Share innovative software solutions
-                                  </h3>
+                                  </h2>
                                 </div>
                               </div>
                               <div class="max-width-small">
@@ -1283,9 +1283,9 @@
                                   >
                                     Technical Skills
                                   </div>
-                                  <h3 class="heading-medium">
+                                  <h2 class="heading-medium">
                                     Mastering modern technologies
-                                  </h3>
+                                  </h2>
                                 </div>
                               </div>
                               <div class="max-width-small">
@@ -1300,7 +1300,7 @@
                             <a
                               class="underline-link-skills w-inline-block"
                               data-w-id="f94c341b-1b27-5818-09b5-2051ded41350"
-                              href="#"
+                              href="images/charbel_tannous_resume.pdf"
                               ><div class="arrow-icon-wrapper">
                                 <div class="arrow-icon-clip-skills">
                                   <div
@@ -1406,10 +1406,10 @@
                                   >
                                     Software Development Process
                                   </div>
-                                  <h3 class="heading-medium">
+                                  <h2 class="heading-medium">
                                     Efficient, scalable, and user-centric
                                     solutions
-                                  </h3>
+                                  </h2>
                                 </div>
                               </div>
                               <div class="max-width-small">
@@ -1739,7 +1739,7 @@
                     <div class="padding-vertical padding-xhuge">
                       <div class="action-intro-wrapper">
                         <div class="action-intro">
-                          <h3 class="heading-large">Schedule a call with me</h3>
+                          <h2 class="heading-large">Schedule a call with me</h2>
                           <div class="max-width-medium">
                             <p class="text-size-regular">
                               I can help with web development, mobile apps, or
