Update call-to-action messaging in project experience pages to highlight web development and software solutions

--- a/experience/pupstorm-project.html
+++ b/experience/pupstorm-project.html
@@ -433,8 +433,8 @@
                           <h3 class="heading-large">Schedule a call with me</h3>
                           <div class="max-width-medium">
                             <p class="text-size-regular">
-                              Let's develop unique positioning and messaging
-                              that speak directly to your target audience.
+                               I can help with web development, mobile apps, or
+                              custom software solutions tailored to your needs.
                             </p>
                           </div>
                         </div>
