Add structured data for SEO enhancement across multiple pages and update Vercel configuration for improved caching and security headers

--- a/about.html
+++ b/about.html
@@ -195,6 +195,25 @@
       }
     </style>
 <link href="/css/blockrain.css" rel="stylesheet"/>
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "AboutPage",
+    "mainEntity": {
+      "@type": "Person",
+      "name": "Charbel Tannous",
+      "jobTitle": "Software Engineer",
+      "description": "Innovative software engineer specializing in web development, Machine Learning, Artificial Intelligence, and custom solutions.",
+      "sameAs": [
+        "https://github.com/Charbel30",
+        "https://linkedin.com/in/charbeltannous",
+        "https://www.youtube.com/@Tuturusaurusrex",
+        "https://www.instagram.com/charbelt_21",
+        "https://x.com/Tuturusaurusrex"
+      ]
+    }
+  }
+  </script>
 </head>
 <body>
 <!-- Transition Preloader -->
