--- a/contact.html
+++ b/contact.html
@@ -253,6 +253,26 @@
       }
     </style>
 <link href="/css/blockrain.css" rel="stylesheet"/>
+<script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ContactPage",
+    "name": "Contact Charbel Tannous",
+    "description": "Get in touch with Software Engineer Charbel Tannous",
+    "mainEntity": {
+      "@type": "Person",
+      "name": "Charbel Tannous",
+      "url": "https://charbeltannous.com",
+      "sameAs": [
+        "https://github.com/Charbel30",
+        "https://linkedin.com/in/charbeltannous",
+        "https://www.youtube.com/@Tuturusaurusrex",
+        "https://www.instagram.com/charbelt_21",
+        "https://x.com/Tuturusaurusrex"
+      ]
+    }
+  }
+  </script>
 </head>
 
 <body>
