--- a/experience/healthcare-systems.html
+++ b/experience/healthcare-systems.html
@@ -47,6 +47,55 @@
         }
       }
     </style>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebPage",
+        "name": "Healthcare Systems R&A - Charbel Tannous Portfolio",
+        "description": "Machine learning solutions for cardiac catheterization prediction and healthcare analysis",
+        "mainEntity": {
+          "@type": "SoftwareSourceCode",
+          "name": "Healthcare Systems Machine Learning Models",
+          "author": {
+            "@type": "Person",
+            "name": "Charbel Tannous",
+            "url": "https://charbeltannous.com"
+          },
+          "programmingLanguage": ["Python", "PyTorch"],
+          "datePublished": "2023-09",
+          "applicationCategory": "Machine Learning",
+          "features": [
+            "Custom bagging neighbor model",
+            "SMOTE and SMOTE-ENN implementation",
+            "Dimensionality reduction (PCA, Isomap)",
+            "PyTorch neural network",
+            "RayTune hyperparameter optimization"
+          ],
+          "about": {
+            "@type": "MedicalBusiness",
+            "name": "Healthcare Systems R&A",
+            "location": "Montreal, QC"
+          },
+          "performanceMetrics": [
+            {
+              "@type": "PropertyValue",
+              "name": "Validation Balanced Accuracy",
+              "value": "77%"
+            },
+            {
+              "@type": "PropertyValue",
+              "name": "Model Performance Improvement",
+              "value": "15%"
+            },
+            {
+              "@type": "PropertyValue",
+              "name": "Neural Network Accuracy",
+              "value": "85%"
+            }
+          ]
+        }
+      }
+      </script>
 </head>
 <body>
 <div class="page-wrapper">
