--- a/experience/pupstorm-project.html
+++ b/experience/pupstorm-project.html
@@ -60,6 +60,46 @@
         }
       }
     </style>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebPage",
+        "name": "Pup Storm - Charbel Tannous Portfolio",
+        "description": "A full-stack pet adoption platform with secure authentication and external API integration",
+        "mainEntity": {
+          "@type": "SoftwareSourceCode",
+          "name": "Pup Storm",
+          "author": {
+            "@type": "Person",
+            "name": "Charbel Tannous",
+            "url": "https://charbeltannous.com"
+          },
+          "programmingLanguage": ["PHP", "MySQL", "JavaScript", "HTML", "CSS"],
+          "url": "https://pupstorm-9ba9083136ba.herokuapp.com",
+          "datePublished": "2023-07",
+          "applicationCategory": "Web Application",
+          "features": [
+            "User authentication system",
+            "Password hashing",
+            "Responsive design",
+            "Cross-browser compatibility",
+            "Mobile responsiveness",
+            "DogAPI integration"
+          ],
+          "technicalRequirements": [
+            "PHP",
+            "MySQL",
+            "JavaScript",
+            "HTML/CSS",
+            "Microsoft Azure",
+            "Heroku",
+            "cURL"
+          ],
+          "operatingSystem": "All",
+          "applicationSubCategory": "Pet Adoption Platform"
+        }
+      }
+      </script>
   </head>
   <body>
     <div class="page-wrapper">
