--- a/experience/wordleable-project.html
+++ b/experience/wordleable-project.html
@@ -47,6 +47,42 @@
         }
       }
     </style>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "WebPage",
+        "name": "Wordleable Project - Charbel Tannous Portfolio",
+        "description": "A responsive web-based word game built with vanilla JavaScript",
+        "mainEntity": {
+          "@type": "SoftwareSourceCode",
+          "name": "Wordleable",
+          "author": {
+            "@type": "Person",
+            "name": "Charbel Tannous",
+            "url": "https://charbeltannous.com"
+          },
+          "programmingLanguage": ["JavaScript", "HTML", "CSS"],
+          "codeRepository": "https://github.com/Charbel30/wordleable",
+          "url": "https://charbel30.github.io/wordleable",
+          "datePublished": "2023-01",
+          "applicationCategory": "Game",
+          "features": [
+            "RESTful API integration",
+            "Interactive feedback system",
+            "Responsive design",
+            "DOM manipulation"
+          ],
+          "technicalRequirements": [
+            "JavaScript",
+            "HTML",
+            "CSS",
+            "REST API",
+            "Postman",
+            "Git"
+          ]
+        }
+      }
+      </script>
 </head>
 <body>
 <div class="page-wrapper">
