--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
       .body {
         background-color: #0f1316;
       }
+      .body{
+        display: hidden;
+      }
+      body.load
 
       /* Hide scrollbar during fast scroll to prevent white flash */
       body::-webkit-scrollbar {
@@ -93,34 +97,92 @@
         background-color: #0f1316;
       }
     </style>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Charbel Tannous",
+        "jobTitle": "Software Engineer",
+        "url": "https://charbeltannous.com",
+        "description": "Innovative software engineer specializing in web development, Machine Learning, Artificial Intelligence, and custom solutions.",
+        "image": "https://charbeltannous.com/images/app-icon.png",
+        "sameAs": [
+          "https://github.com/Charbel30",
+          "https://linkedin.com/in/charbeltannous",
+          "https://www.youtube.com/@Tuturusaurusrex",
+          "https://www.instagram.com/charbelt_21",
+          "https://x.com/Tuturusaurusrex"
+        ],
+        "knowsAbout": [
+          "Web Development",
+          "Machine Learning",
+          "Artificial Intelligence",
+          "Software Engineering",
+          "Full Stack Development",
+          "Python",
+          "JavaScript",
+          "React"
+        ],
+        "workExample": [
+          {
+            "@type": "SoftwareSourceCode",
+            "name": "Healthcare Systems",
+            "codeRepository": "https://charbeltannous.com/experience/healthcare-systems.html",
+            "programmingLanguage": ["Python", "Machine Learning"],
+            "description": "Healthcare systems and machine learning solutions"
+          },
+          {
+            "@type": "SoftwareSourceCode",
+            "name": "Pupstorm Project",
+            "codeRepository": "https://charbeltannous.com/experience/pupstorm-project.html",
+            "url": "https://pupstorm-9ba9083136ba.herokuapp.com",
+            "programmingLanguage": ["PHP", "MySQL", "Web Development"],
+            "description": "Pet adoption and management platform"
+          },
+          {
+            "@type": "SoftwareSourceCode",
+            "name": "Wordleable Project",
+            "codeRepository": "https://charbeltannous.com/experience/wordleable-project.html",
+            "url": "https://charbel30.github.io/wordleable",
+            "programmingLanguage": ["JavaScript", "Web Development"],
+            "description": "Interactive word game application"
+          }
+        ],
+        "alumniOf": {
+          "@type": "University",
+          "name": "Concordia University",
+        }
+      }
+      </script>
   </head>
-  <body class="body">
+  <div
+  class="preloader preloader-hidden"
+  data-w-id="a30832af-37da-084b-575e-ca3a1631cb9b"
+>
+  <div
+    class="preloader-content"
+    data-w-id="a30832af-37da-084b-575e-ca3a1631cb9c"
+  >
     <div
-      class="preloader preloader-hidden"
-      data-w-id="a30832af-37da-084b-575e-ca3a1631cb9b"
+      class="preloader-brand"
+      data-w-id="a30832af-37da-084b-575e-ca3a1631cb9d"
     >
-      <div
-        class="preloader-content"
-        data-w-id="a30832af-37da-084b-575e-ca3a1631cb9c"
-      >
-        <div
-          class="preloader-brand"
-          data-w-id="a30832af-37da-084b-575e-ca3a1631cb9d"
-        >
-          Char
-        </div>
-        <div
-          class="preloader-line"
-          data-w-id="a30832af-37da-084b-575e-ca3a1631cb9f"
-        ></div>
-        <div
-          class="preloader-brand"
-          data-w-id="a30832af-37da-084b-575e-ca3a1631cba0"
-        >
-          bel.
-        </div>
-      </div>
+      Char
     </div>
+    <div
+      class="preloader-line"
+      data-w-id="a30832af-37da-084b-575e-ca3a1631cb9f"
+    ></div>
+    <div
+      class="preloader-brand"
+      data-w-id="a30832af-37da-084b-575e-ca3a1631cba0"
+    >
+      bel.
+    </div>
+  </div>
+</div>
+  <body class="body loaded">
+  
     <div class="page-wrapper">
       <div class="global-styles w-embed">
         <style>
