--- a/work.html
+++ b/work.html
@@ -110,6 +110,46 @@
         }
       }
     </style>
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "CollectionPage",
+        "name": "Portfolio Work - Charbel Tannous",
+        "description": "Collection of software engineering projects and work by Charbel Tannous",
+        "mainEntity": {
+          "@type": "ItemList",
+          "itemListElement": [
+            {
+              "@type": "ListItem",
+              "position": 1,
+              "item": {
+                "@type": "SoftwareSourceCode",
+                "name": "Healthcare Systems",
+                "url": "https://charbeltannous.com/experience/healthcare-systems.html"
+              }
+            },
+            {
+              "@type": "ListItem",
+              "position": 2,
+              "item": {
+                "@type": "SoftwareSourceCode",
+                "name": "Pupstorm Project",
+                "url": "https://charbeltannous.com/experience/pupstorm-project.html"
+              }
+            },
+            {
+              "@type": "ListItem",
+              "position": 3,
+              "item": {
+                "@type": "SoftwareSourceCode",
+                "name": "Wordleable Project",
+                "url": "https://charbeltannous.com/experience/wordleable-project.html"
+              }
+            }
+          ]
+        }
+      }
+      </script>
 </head>
 
 <body>
